rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_split_trim_migrate_horizontal_points_constraint.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: result_normalized
---
sketch(on = YZ) {
  line1 = line(start = [var -3.64mm, var 1.26mm], end = [var -1.7015789473684226mm, var 1.26mm])
  line2 = line(start = [var 3.32mm, var 5.32mm], end = [var -4.67mm, var -1.14mm])
  line3 = line(start = [var 4.34mm, var 3.17mm], end = [var -3.94mm, var -3.95mm])
  point1 = point(at = [var 5mm, var 1.26mm])
  line4 = line(start = [var 2.118820224719102mm, var 1.26mm], end = [var 3.8mm, var 1.26mm])
  coincident([line1.end, line2])
  coincident([line4.start, line3])
  horizontal([line4.end, point1])
}
