rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_split_trim_migrate_perpendicular_constraint.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: result_normalized
---
sketch(on = YZ) {
  line4 = line(
    start = [
      var -0.9496501735630374mm,
      var 5.8710546609872525mm
    ],
    end = [
      var 1.8996501735589408mm,
      var 7.138945346095989mm
    ],
  )
  line1 = line(
    start = [var -1.97mm, var 3.24mm],
    end = [
      var -1.2510292359874842mm,
      var 1.6242742347335242mm
    ],
  )
  line2 = line(start = [var 3.32mm, var 5.32mm], end = [var -4.67mm, var -1.14mm])
  line3 = line(
    start = [
      var 4.340786374124431mm,
      var 3.169085508812116mm
    ],
    end = [
      var -3.939061741504435mm,
      var -3.9510911206051067mm
    ],
  )
  perpendicular([line4, line1])
  line5 = line(
    start = [
      var -0.15186797211913333mm,
      var -0.6943298622772287mm
    ],
    end = [
      var 0.5642230098912687mm,
      var -2.303583962716849mm
    ],
  )
  coincident([line1.end, line2])
  coincident([line5.start, line3])
  perpendicular([line4, line5])
}
