rust/kcl-lib/src/frontend/trim/snapshots/kcl_lib__frontend__trim__tests__test_split_trim_migrate_vertical_constraint.snap
---
source: kcl-lib/src/frontend/trim/tests.rs
expression: result_normalized
---
sketch(on = YZ) {
  line1 = line(start = [var -0.36mm, var 3.66mm], end = [var -0.36mm, var 2.3446808510638304mm])
  line2 = line(start = [var 3.32mm, var 5.32mm], end = [var -4.67mm, var -1.14mm])
  line3 = line(start = [var 4.34mm, var 3.17mm], end = [var -3.94mm, var -3.95mm])
  vertical(line1)
  line4 = line(start = [var -0.36mm, var -0.8715458937198068mm], end = [var -0.36mm, var -2.66mm])
  coincident([line1.end, line2])
  coincident([line4.start, line3])
  vertical(line4)
}
